Atualização para Tablet

--- a/app.json
+++ b/app.json
@@ -8,10 +8,17 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "config": {
+        "orientation": "default"
+      },
     },
     "android": {
+      "config": {
+        "orientation": "default"
+      },
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
