--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "expo-linking": "~7.0.2",
     "expo-location": "~18.0.1",
     "expo-router": "~4.0.5",
-    "expo-screen-orientation": "^8.0.0",
+    "expo-screen-orientation": "~8.0.0",
     "expo-splash-screen": "~0.29.10",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
